# cloud_motion

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  EXECUTION_GUIDE.md  GITHUB_PUSH.md  GITHUB_SETUP_SUMMARY.md  LICENSE  MOSDAC_SETUP.md  PRODUCTION_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_GITHUB.md  README.md  SETUP.md  auto_download_mosdac.py  config.py  diagnostic.py  evaluate.py  inspect_all_h5.py  latlon_insat3dr.nc  plotly_viz.py  pyproject.toml  requirements.txt  streamlit_app.py  train.py
.github/workflows/: tests.yml
images/: .gitkeep
images/gifs/: .gitkeep
images/grids/: .gitkeep
images/sequences/: .gitkeep
latlon/: .gitkeep
preprocessor/: full_preprocessor.py  visualize_data.py
processed/: .gitkeep
results/: .gitkeep
sequences/: .gitkeep
